# Eth-Unite-Hackathon

./: README.md  hardhat.config.ts  package-lock.json  package.json
contracts/: AdaptiveLimitOrder.sol  CrossChainBridge.sol  DynamicSlippageCalculator.sol  SlippageOptimizer.sol  VolatilityProxy.sol
contracts/interfaces/: I1inchLimitOrderProtocol.sol  IAdaptaFlowSystem.sol  IAmountGetter.sol  IDynamicSlippageCalculator.sol  IDynamicsSlippageCalculator.sol
contracts/mocks/: MockLimitOrderProtocol.sol  MockPriceOracle.sol  TestERC20.sol
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx  wagmi.ts
frontend/src/app/hooks/: useAdaptaFlow.ts
frontend/src/app/trade/: page.tsx
near-contracts/: Cargo.toml  README.md  build.sh  deploy.sh
near-contracts/src/: lib.rs
scripts/: deploy-full-system.ts  deploy.ts  test-flow.ts
